# DEVOPS_PIPELINES

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: docker-build.yml
static/css/: style.css
templates/: base.html  index.html
